@@ -1,3 +1,7 @@
+2014-06-03  Andrew Pinski  <apinski@cavium.com>
+
+	* gcc.c-torture/compile/20140528-1.c: New testcase.
+
 2015-01-13  Andrew Pinski  <apinski@cavium.com>
 
 	* gcc.target/aarch64/store-pair-1.c: New testcase.
